<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoGuide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_btn_find">Find</string>
    <string name="categories">Categories</string>
    <string name="change_radius">Change Radius</string>
    <string name="save_radius">Save Radius</string>
    <string name="share">Share</string>
    <string name="add_fav">Add to Favourites</string>
    <string name="fav_list">Favourites List</string>
    <string name="mapTypeNone">No Map</string>
    <string name="mapTypeNormal">Normal Map</string>
    <string name="mapTypeSatellite">Satellite Map</string>
    <string name="mapTypeTerrain">Terrain Map</string>
    <string name="mapTypeHybrid">Hybrid Map</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>



    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>movie_theater</item>
        <item>restaurant</item>
    </string-array>
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Movie Theater</item>
        <item>Restaurant</item>
    </string-array>

    <string-array name="action_list">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
    </string-array>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
    <item >Home</item>
    <item >Favorite Places</item>
    <item >Photos</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>

    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="title_activity_fav_activity">fav_activity</string>
    <string name="title_activity_favorite_item">FavoriteItem</string>

</resources>
