<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" >
<item
    android:id="@+id/share"
    app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
    app:showAsAction="always"
    android:title="@string/share" />


    <item
        android:id="@+id/a_More"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="always"
        android:title="More">
    <menu>
        <item
            android:id="@+id/add_fav"
            android:icon="@drawable/btn_star_big_on"
            app:showAsAction="always|withText"
            android:title="@string/add_fav" />

        <item
            android:id="@+id/fav_list"
            android:icon="@drawable/fv_list"
            app:showAsAction="always|withText"
            android:title="@string/fav_list" />
    </menu>
    </item>

</menu>